--- a/liste_taches.html
+++ b/liste_taches.html
@@ -13,8 +13,9 @@
 <body>
     <header>
         <h1>To Do List</h1>
+        <button class="ajouter" onclick="afficherModal()"> Ajouter une tâche</button>
     </header>
-        <button class="ajouter" onclick="afficherModal()">+ Ajouter une tâche</button>
+        
     <div id="message">
 
     </div>
